--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
 								<button class="menu__header-item--button menu__header-item--button-call"></button>
 							</li>
 							<li class="menu__header-item menu__header-item--hide-on-desktop menu--laptop">
-								<button class="menu__header-item--button menu__header-item--button-chat"></button>
+								<button class="menu__header-item--button menu__header-item--button-feedback"></button>
 							</li>
 							<li class="menu__header-item menu__header-item--hide-on-desktop menu--laptop">
 								<button class="menu__header-item--button menu__header-item--button-profile"></button>
@@ -239,7 +239,7 @@
 						<button class="menu__header-item--button menu__header-item--button-call"></button>
 					</li>
 					<li class="menu__header-item">
-						<button class="menu__header-item--button menu__header-item--button-chat"></button>
+						<button class="menu__header-item--button menu__header-item--button-feedback"></button>
 					</li>
 					<li class="menu__header-item">
 						<button class="menu__header-item--button menu__header-item--button-profile"></button>
@@ -267,60 +267,60 @@
 			<!-- end of modal menu -->
 
 			<!--	modal feedback-->
-			<div class="modal-menu modal-feedback modal-menu--width-handling">
-				<button class="modal-feedback__btn menu__header-item--button menu__header-item--button-close"></button>
+			<div class="modal-menu modal-extra modal-extra--feedback modal-menu--width-handling">
+				<button class="modal-extra__btn menu__header-item--button menu__header-item--button-close"></button>
 
 				<h1 class="title title--top">Обратная связь</h1>
 
-				<form class="modal-feedback__form" action="#">
-					<label class="modal-feedback__label" for="modal-name">
+				<form class="modal-extra__form" action="#">
+					<label class="modal-extra__label" for="modal-name">
 						<input type="text" name="modal-name" id="modal-name" placeholder="Имя" />
 					</label>
-					<label class="modal-feedback__label" for="modal-phone">
+					<label class="modal-extra__label" for="modal-phone">
 						<input type="text" name="modal-phone" id="modal-phone" placeholder="Телефон" />
 					</label>
-					<label class="modal-feedback__label" for="modal-email">
+					<label class="modal-extra__label" for="modal-email">
 						<input type="text" name="modal-email" id="modal-email" placeholder="Электронная почта" />
 					</label>
 
-					<label for="modal-message" class="modal-feedback__label">
-						<textarea class="modal-feedback__message" name="modal-message" id="modal-message" cols="30" rows="10" placeholder="Сообщение"></textarea>
+					<label for="modal-message" class="modal-extra__label">
+						<textarea class="modal-extra__message" name="modal-message" id="modal-message" cols="30" rows="10" placeholder="Сообщение"></textarea>
 					</label>
 				</form>
 
-				<p class="modal-feedback__text">
+				<p class="modal-extra__text">
 					Нажимая “отправить”, вы даете согласие на
 					<a href="#" class="link link--red">обработку персональных данных</a> и соглашаетесь с нашей
 					<a href="#" class="link link--red">политикой конфиденциальности</a>
 				</p>
 
-				<button class="modal-feedback__btn-send" type="submit">Отправить</button>
+				<button class="modal-extra__btn-send" type="submit">Отправить</button>
 			</div>
 			<!--	end of modal feedback-->
 
 			<!--	modal call-->
-			<div class="modal-menu modal-feedback modal-menu--width-handling">
-				<button class="modal-feedback__btn menu__header-item--button menu__header-item--button-close"></button>
+			<div class="modal-menu modal-extra modal-extra--call modal-menu--width-handling">
+				<button class="modal-extra__btn menu__header-item--button menu__header-item--button-close"></button>
 
 				<h1 class="title title--top">Заказать звонок</h1>
 
-				<form class="modal-feedback__form" action="#">
-					<label class="modal-feedback__label" for="modal-name">
-						<input type="text" name="modal-call" id="modal-call" placeholder="Телефон" />
+				<form class="modal-extra__form" action="#">
+					<label class="modal-extra__label" for="modal-name">
+						<input type="text" name="modal-extra" id="modal-extra" placeholder="Телефон" />
 					</label>
 				</form>
 
-				<p class="modal-feedback__text">
+				<p class="modal-extra__text">
 					Нажимая “отправить”, вы даете согласие на
 					<a href="#" class="link link--red">обработку персональных данных</a> и соглашаетесь с нашей
 					<a href="#" class="link link--red">политикой конфиденциальности</a>
 				</p>
 
-				<button class="modal-feedback__btn-send" type="submit">Отправить</button>
+				<button class="modal-extra__btn-send" type="submit">Отправить</button>
 			</div>
 			<!--	end of modal call-->
 		</div>
-		<div class="modal-blur modal-blur--off"></div>
+		<div class="modal-blur"></div>
 
 		<!--	End of page wrapper-->
 	</body>
